Added simple form

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,10 @@
-h1 Home#index
-p Find me in app/views/home/index.html.slim
+.jumbotron
+  h1.display-4
+    | Welcome to Dart!
+  p.lead
+    | This is a simple application where you can search the accounts linked to a phone number.
+  hr.my-4
+  p
+    | It uses modern APIs to search for all the accounts linked to the number.
+  a.btn.btn-primary.btn-lg[href="#" role="button"]
+    | Learn more
