--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -6,11 +6,4 @@
   hr.my-4
   p
     | It uses modern APIs to search for all the accounts linked to the number.
-  .row
-    = simple_form_for Contact.new do |f|
-      .col
-        = f.input :country
-      .col
-        = f.input :number
-      .col
-        = f.submit "Search", class: 'btn btn-lg btn-primary'
+  = link_to 'Get Started', new_contact_path, class: 'btn btn-primary btn-lg', role: 'button'
